# PythonGuide

./: .gitignore  .gitlab-ci.yml  .readthedoc.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: FOUNDING.yml
.github/workflows/: main.yml
DevTool/git/: index.html
about/: index.html
contributing/: index.html
developement/: index.html
docs/: Library.md  contributing.md  developement.md  index.md  installation.md  make.py  memento_pep8.md  not_imp.md  not_implemented.md  standard.md  test.md
docs/DevTool/: git.md
docs/source/: conf.py  index.rst
installation/: index.html
memento_pep8/: index.html
not_imp/: index.html
not_implemented/: index.html
pythonguide/: ex_logging.py
pythonguide/Babel/: _info.txt  format_date.py  locale.py
pythonguide/Gpiozero/: led_blink.py  servomot.py
pythonguide/Matplotlib/: FuncAnimation.py  Share_label.py  base.py  customtable.py  image_patch.py  lines3d_demo.py
pythonguide/Numpy/: Elementfini.py  Neural_Network.py  PAF_Numpy_presentation.py
pythonguide/Pywin32/: COMsample.py  apointment.py  clasnif.py  otester.py
pythonguide/SQLAlchemy/: orm_test.py
pythonguide/Scipy/: derivative.py
pythonguide/Sympy/: PAF_sympy_presentation.py
pythonguide/_Module Base/: Base_Python3.py  Calculator_Python3.py  Class_Vecteur.py  balle_rebondissante.py  game.py  listtri.py  neural_net.py  shelve.ipynb  sqlite.ipynb
pythonguide/_Snippets/: cinematic.py  contains_point.py  filter.py  funfact.py  group_csv.py  (+4 more)
search/: search_index.json
test/: index.html
(+53 files in other folders)
