[tool.poetry]
name = "PythonGuide"
version = "0.1.0"
description = "A simple guide for python "
authors = ["YoannMos"]
license = "MIT"
readme = "README.md"

homepage = "https://yoannmos.github.io/PythonGuide/"
repository = "https://github.com/yoannmos/PythonGuide"

keywords = ["guide"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pydantic = { git = "https://github.com/samuelcolvin/pydantic.git", rev = "v1.8.2" }
Babel = "^2.9.1"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
sympy = "^1.8"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
black = "^21.7b0"
isort = "^5.9.3"

mkdocs = "^1.2.2"
mkdocs-material = "^7.2.5"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mkdocs-jupyter = "^0.17.3"


[tool.poetry.scripts]
launcher = 'inupdater:__main__'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["inupdater/tests/*", ".venv/*"]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    # Disable docstrings checks as we don't require excessive documentation.
    "missing-docstring",
]
